--- a/main.css
+++ b/main.css
@@ -3,11 +3,55 @@ body {background-color: #005872;}
 h2 {font-size: 40px;
   color: #b14c3d;}
       div {font-size: 20px;
-        color : #005872;}
+        color : #e6d8b2;}
 
-.inline-block_test {
-  display: inline-block;      /* インラインブロック要素にする */
-  background-color:  #e6d8b2;    /* 背景色指定 */
-  height:  300px;             /* 高さ指定 */
-  width: 600px;                 /* 幅指定 */
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 3fr 1fr  ;
+  grid-template-rows: 100px 100px;
+  grid-gap: 10px;
+}
+
+.titleBox {
+  grid-column: 1 / 2;
+  grid-row: 1;
+}
+
+.pastArticleBox  {
+  grid-row: 2;
+  grid-column: 1;
+  
+}
+
+.ContentBox {
+  grid-row: 2;
+  grid-column: 2;
+
+}
+
+
+
+
+/*
+.titleBox {
+  grid-column: 1 / 3;
+  grid-row: 1;
+  
+}
+
+.ContentBox  {
+  grid-column: 1;
+  grid-row: 2;
+  display: inline-block;
+  background-color:  #e6d8b2;    
+
+}
+
+.pastArticleBox {
+  grid-column: 2;
+  grid-row: 2;
+  display: inline-block;
+  background-color:  #bfdacc; 
+
 }
