--- a/main.css
+++ b/main.css
@@ -20,14 +20,15 @@ h2 {font-size: 40px;
 
 .pastArticleBox  {
   grid-row: 2;
-  grid-column: 1;
+  grid-column: 2;
   
 }
 
 .ContentBox {
   grid-row: 2;
-  grid-column: 2;
-
+  grid-column: 1;
+  background-color: #e6d8b2;
+  color : #005872;
 }
 
 
