--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ h2 {font-size: 40px;
 .wrapper {
   display: grid;
   grid-template-columns: 3fr 1fr  ;
-  grid-template-rows: 100px 100px;
+  grid-template-rows: 100px 500px;
   grid-gap: 10px;
 }
 
@@ -21,6 +21,8 @@ h2 {font-size: 40px;
 .pastArticleBox  {
   grid-row: 2;
   grid-column: 2;
+  background-color: #e6d8b2;
+  color : #005872;
   
 }
 
