--- a/design/article_design.css
+++ b/design/article_design.css
@@ -11,26 +11,24 @@ h1 {font-size: 40px;
 
 .wrapper {
   display: grid;
-  grid-template-columns: 3fr 1fr  ;
+  grid-template-columns: 1fr  ;
   grid-template-rows: 100px 500px;
   grid-gap: 10px;
 }
 
 .titleBox {
-  grid-column: 1 / 2;
+  grid-column: 1;
   grid-row: 1;
 }
 
-.pastArticleBox  {
-  grid-row: 2;
+.subtitleBox {
   grid-column: 2;
-  background-color: #e6d8b2;
-  color : #005872;
-  
+  grid-row: 1;
+  font-size: 30px;
 }
 
 .ContentBox {
-  grid-row: 2;
+  grid-row: 3;
   grid-column: 1;
   background-color: #e6d8b2;
   color : #005872;
