--- a/design/article_design.css
+++ b/design/article_design.css
@@ -12,8 +12,8 @@ h1 {font-size: 40px;
 .wrapper {
   display: grid;
   grid-template-columns: 1fr  ;
-  grid-template-rows: 100px 500px;
-  grid-gap: 10px;
+  grid-template-rows: 100px 100px;
+  grid-gap: 0px;
 }
 
 .titleBox {
@@ -22,14 +22,15 @@ h1 {font-size: 40px;
 }
 
 .subtitleBox {
-  grid-column: 2;
-  grid-row: 1;
+  grid-column: 1;
+  grid-row: 2;
   font-size: 30px;
+  background-color: #e6d8b2;
 }
 
 .ContentBox {
-  grid-row: 3;
   grid-column: 1;
+  grid-row: 3;
   background-color: #e6d8b2;
   color : #005872;
 }
